# aoc-2025

./: Cargo.toml  README.md  justfile
aoc-2025-day-1/: Cargo.toml  README.md
aoc-2025-day-1/src/: commands.rs  dial.rs  main.rs
day-1/: Cargo.toml  LICENCE.txt  README.md
day-1/src/: dial.rs
day-1/src/part_1/: dial.rs  mod.rs
day-1/src/part_2/: dial.rs  mod.rs
day-1/src/shared/: parse.rs
day-2/: Cargo.toml  README.md
day-2/src/: lib.rs  main.rs
day-2/src/part_1/: mod.rs
day-2/src/part_2/: mod.rs
day-2/src/shared/: parse.rs
day-3/: Cargo.toml  README.md
day-3/src/: lib.rs
day-3/src/part_1/: mod.rs
day-3/src/part_2/: mod.rs
day-4/: Cargo.toml  README.md
day-4/src/part_1/: mod.rs
day-4/src/part_2/: mod.rs
day-4/src/shared/: mod.rs
day-5/: Cargo.toml  README.md
day-5/src/: lib.rs
day-5/src/part_1/: mod.rs
day-5/src/part_2/: mod.rs
day-5/src/shared/: mod.rs
globals/: Cargo.toml  README.md
globals/src/: lib.rs
runner/: Cargo.toml  README.md
runner/src/: args.rs  main.rs
