[package]
name = "aoc-2025-runner"
description = "Theodore's Advent of Code 2025 code runner and test suite"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
aoc-2025-globals.workspace = true
aoc-2025-day-1 = { path = "../day-1" }
aoc-2025-day-2 = { path = "../day-2" }
aoc-2025-day-3 = { path = "../day-3" }
aoc-2025-day-4 = { path = "../day-4" }
clap = { version = "4.5.53", features = ["derive"] }
pastey = "0.2.0"

[lints]
workspace = true
